description更新,プロフィール更新

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hideo's Portfolio</title>
+  <meta name=”description” content=”Hideoのポートフォリオサイトです。学んだ技術を随時反映していきます。” />
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/slick/slick.css">
   <link rel="stylesheet" href="assets/css/slick/slick-theme.css">
@@ -195,7 +196,7 @@
               <ul class="profile-list">
                 <li>
                   <div class="item-ttl">名前：</div>
-                  <p class="item-text">増田 英雄(Hideo Masuda)</p>
+                  <p class="item-text">Hideo</p>
                 </li>
                 <li>
                   <div class="item-ttl">性別：</div>
