ポートフォリオ　改修

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
       <div class="content-wrap">
         <div class="page-size">
           <h2 class="sec-ttl ta_c font-raleway">Works</h2>
-          <p class="sec-read ta_c">ただいま準備中につき、ダミーの画像を使用しています。</p>
+          <p class="sec-read ta_c">デモサイトにつき、ダミーの画像を使用しています。</p>
           <ul class="works-list flex">
             <li>
               <a href="">
                 <div class="img-area">
-                  <img src="assets/img/works_img01.png" alt="">
+                  <img src="assets/img/php-todo.png" alt="">
                 </div>
-                <p class="item-detail">2020.07 Coding</p>
+                <p class="item-detail">2025.02 Coding</p>
               </a>
             </li>
             <li>
@@ -187,7 +187,8 @@
       <div class="content-wrap">
         <div class="page-size">
           <h2 class="sec-ttl ta_c font-raleway">About</h2>
-          <!-- <p class="sec-read ta_c">自己紹介</p> -->
+          <p class="sec-read ta_c">
+            Web制作とWebマーケティングの領域で5年間経験を積んでいるフロントエンドエンジニアです。</p>
           <div class="flex">
             <div class="img-area">
               <img src="assets/img/profile.png" alt="">
@@ -207,16 +208,12 @@
                   <p class="item-text">東京都</p>
                 </li>
                 <li>
-                  <div class="item-ttl">所在地：</div>
-                  <p class="item-text">東京都</p>
-                </li>
-                <li>
                   <div class="item-ttl">職種：</div>
-                  <p class="item-text">コーダー、マークアップエンジニア</p>
+                  <p class="item-text">フロントエンドエンジニア、SEOアナリスト</p>
                 </li>
                 <li>
                   <div class="item-ttl">業務内容：</div>
-                  <p class="item-text">Web制作におけるディレクション、HTML・CSS・JavaScriptコーディング、レスポンシブ対応、CMS(WordPress)導入等</p>
+                  <p class="item-text">WordPressサイトの開発・運用・保守、SEO対策の実施、表示速度改善、業務効率化ツールの開発 など</p>
                 </li>
                 <li>
                   <div class="item-ttl">特技：</div>
@@ -225,6 +222,10 @@
                 <li>
                   <div class="item-ttl">趣味：</div>
                   <p class="item-text">筋トレ、ゲーム、釣り</p>
+                </li>
+                <li>
+                  <div class="item-ttl">Github：</div>
+                  <p class="item-text"><a href="https://github.com/hideomasuda" target="_blank" class="link">https://github.com/hideomasuda</a></p>
                 </li>
               </ul>
             </div>
@@ -237,22 +238,22 @@
       <div class="content-wrap">
         <div class="page-size">
           <h2 class="sec-ttl ta_c font-raleway">Blog</h2>
-          <p class="sec-read ta_c">ただいま投稿機能の準備中につき、ダミーの投稿を使用しています。</p>
+          <p class="sec-read ta_c">デモサイトにつき、ダミーの投稿を使用しています。<br>実際には、WordPressでコンテンツ管理ができるように開発できます。</p>
           <ul class="blog-list">
             <li>
-              <a href="">
+              <a href="./blog/article01.html">
                 <div class="img-area">
                   <img src="assets/img/works_img01.png" alt="">
                 </div>
                 <div class="text-area">
                   <div class="ttl">記事タイトル記事タイトル記事タイトル記事タイトル記事タイトル記事タイトル記事タイトル記事タイトル記事タイトル記事タイトル</div>
                   <div class="desc">ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト。ダミーテキスト。ダミーテキスト。</div>
-                  <div class="date-area">投稿日：<span class="date">2022.07.29</span></div>
+                  <div class="date-area">投稿日：<span class="date">2025.02.06</span></div>
                 </div>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="./blog/article01.html">
                 <div class="img-area">
                   <img src="assets/img/works_img02.png" alt="">
                 </div>
@@ -264,7 +265,7 @@
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="./blog/article01.html">
                 <div class="img-area">
                   <img src="assets/img/works_img03.png" alt="">
                 </div>
@@ -298,7 +299,8 @@
               <span class="input-ttl">お問い合わせ内容：</span>
               <textarea name="message"></textarea>
             </label>
-            <button type="submit">送信</button>
+            <button type="submit" disabled>送信</button>
+            <p class="ta_c" style="margin-top: 30px;">※デモサイトのため送信を受け付けません。</p>
           </form>
         </div>
       </div>
@@ -334,7 +336,7 @@
             <a href="#sec05">Contact</a>
           </li>
         </ul>
-        <p class="copyright ta_c font-raleway">&copy;copyright 2020 - 2022</p>
+        <p class="copyright ta_c font-raleway">&copy;copyright 2020 - 2025</p>
       </div>
     </div>
   </footer>
