ポートフォリオ　改修

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="img-area">
                 <img src="assets/img/service_img01.svg" alt="">
               </div>
-              <p class="text">Webサイト制作ではデザイン段階に入る前の準備が特に重要になります。お客様のご要望をヒアリングし、理想のWebサイトを作るための<span class="marker">最適なプランをご提案</span>致します。</p>
+              <p class="text">Webサイト制作ではデザイン段階に入る前の準備が特に重要になります。お客様のご要望をヒアリングし、理想のWebサイトを作るための<span class="marker">最適なプランをご提案</span>します。</p>
             </li>
             <li>
               <h3 class="item-ttl ta_c">
@@ -200,10 +200,6 @@
                   <p class="item-text">Hideo</p>
                 </li>
                 <li>
-                  <div class="item-ttl">性別：</div>
-                  <p class="item-text">男</p>
-                </li>
-                <li>
                   <div class="item-ttl">出身地：</div>
                   <p class="item-text">東京都</p>
                 </li>
@@ -216,12 +212,16 @@
                   <p class="item-text">WordPressサイトの開発・運用・保守、SEO対策の実施、表示速度改善、業務効率化ツールの開発 など</p>
                 </li>
                 <li>
-                  <div class="item-ttl">特技：</div>
-                  <p class="item-text">ベース演奏</p>
+                  <div class="item-ttl">スキル：</div>
+                  <p class="item-text">HTML/CSS、Javascript、PHP、Python、GAS、VBA、WordPress、React.js（学習中）、Laravel（学習中）</p>
+                </li>
+                <li>
+                  <div class="item-ttl">保有資格：</div>
+                  <p class="item-text">Excel VBA スタンダード、PHP7技術者認定初級、日商簿記3級</p>
                 </li>
                 <li>
                   <div class="item-ttl">趣味：</div>
-                  <p class="item-text">筋トレ、ゲーム、釣り</p>
+                  <p class="item-text">ベース演奏、筋トレ、ゲーム、釣り</p>
                 </li>
                 <li>
                   <div class="item-ttl">Github：</div>
@@ -238,7 +238,7 @@
       <div class="content-wrap">
         <div class="page-size">
           <h2 class="sec-ttl ta_c font-raleway">Blog</h2>
-          <p class="sec-read ta_c">デモサイトにつき、ダミーの投稿を使用しています。<br>実際には、WordPressでコンテンツ管理ができるように開発できます。</p>
+          <p class="sec-read ta_c">デモサイトにつき、ダミーの投稿を表示しています。<br>実際には、WordPressを用いて動的にコンテンツ管理ができるように開発できます。</p>
           <ul class="blog-list">
             <li>
               <a href="./blog/article01.html">
